--- a/style.css
+++ b/style.css
@@ -1,11 +1,12 @@
 body {
-    margin: 0;
-    height: 100vh;
+    text-align: center;
     display: flex;
-    align-items: center;
+    flex-direction: column;
     justify-content: center;
-    background-color: black;
+    align-items: center;
+
 }
+
 
 form ol {
     list-style-type: none;
